# technical-article-curation

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  ROBUSTNESS_PLAN.zh-CN.md  _del_nul.py  compose.dev.yml  pyproject.toml
config/: sources.yaml
docs/: PROJECT.md  PROJECT.zh-CN.md  SOURCE_AUDIT.md  SOURCE_EXPANSION_RESEARCH.md
docs/designs/: 2026-06-21--fastapi-admin-console-execution-plan.md  2026-06-21--fastapi-admin-console.md  2026-06-22--built-in-cron-scheduler.md  2026-06-22--public-rss-feed.md  2026-06-22--rsshub-integration.md
migrations/: 001_initial.sql  002_robustness_state.sql  003_fastapi_admin_state.sql  004_drop_evaluation_confidence.sql  005_job_runs.sql  006_article_publish_policy.sql  007_rebuild_published_queue.sql  008_rebuild_tech_growth_schema.sql  009_tag_vocabulary.sql  010_feed_entry_content.sql  011_seed_tag_vocabulary.sql  012_drop_article_publish_policy.sql  013_unique_article_normalized_url.sql  014_drop_evaluation_dimensions.sql  015_drop_evaluation_full_reasoning.sql
prompts/: evaluate.md
prompts/en/: evaluate.md
prompts/en/few_shots/: accept.json  low_confidence.json  reject.json
prompts/few_shots/: accept.json  low_confidence.json  reject.json
prompts/zh-CN/: evaluate.md
prompts/zh-CN/few_shots/: accept.json  learning_path.json  low_confidence.json  reject.json  reject_personal.json  research_article.json
src/tac/: __init__.py  app.py  cli.py  config.py  db.py  deps.py  discover.py  evaluate.py  fetch.py  jobs.py  main.py  models.py  pipeline.py  publish.py  settings.py  sources.py  utils.py
src/tac/admin_static/: admin.html  admin.js
src/tac/api/: admin.py  public.py
src/tac/application/: jobs.py  pipeline.py  scheduler.py  tag_cache.py
src/tac/application/use_cases/: discover_articles.py  evaluate_articles.py  fetch_articles.py  generate_feed.py  manage_articles.py  manage_sources.py  manage_tags.py  publish_articles.py
src/tac/domain/: models.py
src/tac/infrastructure/db/: store.py
src/tac/infrastructure/sources/: yaml_loader.py
src/tac/services/: __init__.py  articles.py  sources.py
src/tac/shared/: dates.py  utils.py
src/tac/web/: deps.py  security.py
src/tac/web/routers/: admin.py  public.py
src/tac/web/static/: admin.css  admin.html  admin.js
tests/: test_api.py  test_config.py  test_db.py  test_discover.py  test_e2e.py  test_evaluate.py  test_fetch.py  test_jobs.py  test_models.py  test_pipeline.py  test_publish.py  test_scheduler.py  test_utils.py
tests/fixtures/ai/: accept.json
tests/fixtures/html/: queue-latency.html
tests/fixtures/markdown/: queue-latency.md
tests/fixtures/rss/: sample.xml
tests/fixtures/sources/: manual.yaml
