[project]
name = "technical-article-curation"
version = "0.1.0"
description = "AI-assisted technical article curation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "openai>=2.0.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "typer>=0.12.5",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
crawler = [
    "crawl4ai>=0.4.0",
]
test = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
tac = "tac.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/tac"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "PT",
]
ignore = [
    "E501",
    "UP042",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
